--- a/mens-fashion-store/package.json
+++ b/mens-fashion-store/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-label": "^2.1.8",
     "@supabase/supabase-js": "^2.84.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@types/bcryptjs": "^3.0.0",
