--- a/mens-fashion-store/package.json
+++ b/mens-fashion-store/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.22",
@@ -27,6 +28,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
     "next": "^16.0.3",
+    "nodemailer": "^7.0.11",
     "postcss": "^8.5.6",
     "razorpay": "^2.9.6",
     "react": "^19.2.0",
